--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "quar",
+  "name": "ngx-onetrust",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -10,22 +10,22 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.2.1",
-    "@angular/common": "~13.2.1",
-    "@angular/compiler": "~13.2.1",
-    "@angular/core": "~13.2.1",
-    "@angular/forms": "~13.2.1",
-    "@angular/platform-browser": "~13.2.1",
-    "@angular/platform-browser-dynamic": "~13.2.1",
-    "@angular/router": "~13.2.1",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.3.1",
-    "zone.js": "~0.11.4"
+    "@angular/animations": "14.2.12",
+    "@angular/common": "14.2.12",
+    "@angular/compiler": "14.2.12",
+    "@angular/core": "14.2.12",
+    "@angular/forms": "14.2.12",
+    "@angular/platform-browser": "14.2.12",
+    "@angular/platform-browser-dynamic": "14.2.12",
+    "@angular/router": "14.2.12",
+    "rxjs": "~7.5.0",
+    "tslib": "^2.6.2",
+    "zone.js": "~0.12.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^13.2.2",
-    "@angular/cli": "~13.2.2",
-    "@angular/compiler-cli": "~13.2.1",
+    "@angular-devkit/build-angular": "~14.2.12",
+    "@angular/cli": "~14.2.12",
+    "@angular/compiler-cli": "14.2.12",
     "@types/jasmine": "~3.10.3",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.2",
