--- a/projects/ngx-onetrust/package.json
+++ b/projects/ngx-onetrust/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@altack/ngx-onetrust",
-  "version": "1.3.1",
+  "version": "1.4.0",
   "license": "MIT",
   "description": "OneTrust loader & wrapper for Angular",
   "keywords": [
@@ -12,11 +12,11 @@
     "url": "https://github.com/guzmanoj/ngx-onetrust"
   },
   "peerDependencies": {
-    "@angular/common": "^13.2.0",
-    "@angular/core": "^13.2.0",
-    "rxjs": "^6.6.0"
+    "@angular/common": "14.2.12",
+    "@angular/core": "14.2.12",
+    "rxjs": "~7.5.0"
   },
   "dependencies": {
-    "tslib": "^2.3.0"
+    "tslib": "^2.6.2"
   }
 }
